<?xml version="1.0"?>
<package format="2">
  <name>estimate_pose</name>
  <version>1.0.0</version>
  <description>The estimate_pose package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>fovis</depend>
<!--  <depend>libglib-dev</depend>

  
  <depend>mesa-common-dev</depend>
  <depend>opengl</depend>
  <depend>glut</depend>
  <depend>libjpeg</depend>-->
</package>
